--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -88,7 +88,7 @@
         "\n",
         "qog_link = \"../datasets/qog2022.csv\"\n",
         "qog = pd.read_csv(qog_link)\n",
-        "qog.head()"
+        "qog.head()\n"
       ]
     },
     {
@@ -153,12 +153,10 @@
       "outputs": [],
       "source": [
         "# The Figure is the blue box, the Axes is the white plotting area inside it\n",
-        "fig = plt.figure(figsize=(3, 3),\n",
-        "                 facecolor='lightskyblue',\n",
-        "                 layout='constrained')\n",
-        "fig.suptitle('Figure')\n",
+        "fig = plt.figure(figsize=(3, 3), facecolor=\"lightskyblue\", layout=\"constrained\")\n",
+        "fig.suptitle(\"Figure\")\n",
         "ax = fig.add_subplot()\n",
-        "ax.set_title('Axes', loc='left');"
+        "ax.set_title(\"Axes\", loc=\"left\");"
       ]
     },
     {
@@ -222,13 +220,10 @@
       "source": [
         "fig, ax = plt.subplots()\n",
         "\n",
-        "ax.plot(x, np.sin(x), label='sin(x)', linestyle='--')\n",
-        "ax.plot(x, np.cos(x), label='cos(x)', linestyle='-')\n",
+        "ax.plot(x, np.sin(x), label=\"sin(x)\", linestyle=\"--\")\n",
+        "ax.plot(x, np.cos(x), label=\"cos(x)\", linestyle=\"-\")\n",
         "\n",
-        "ax.set(title='Trigonometric Functions',\n",
-        "       xlabel='x',\n",
-        "       ylabel='y',\n",
-        "       xlim=(0, 10))\n",
+        "ax.set(title=\"Trigonometric Functions\", xlabel=\"x\", ylabel=\"y\", xlim=(0, 10))\n",
         "\n",
         "ax.legend();"
       ]
@@ -261,12 +256,17 @@
       "outputs": [],
       "source": [
         "# The standard pattern\n",
-        "x = np.linspace(0, 10, 100)\n",
-        "\n",
+        "x = np.linspace(0, 5, 100)\n",
         "\n",
         "fig, ax = plt.subplots()\n",
-        "ax.plot(x, x**2)\n",
-        "ax.plot(x, x**3)"
+        "ax.plot(x, x**2, label=\"x^2\", linestyle=\"--\")\n",
+        "ax.plot(x, x**3, label=\"x^3\", linestyle=\"-\")\n",
+        "ax.plot(x, x**1.5, label=\"x^1.5\", color=\"green\", linewidth=2)\n",
+        "\n",
+        "ax.set(title=\"Polynomial Functions\", xlabel=\"x\", ylabel=\"y\", xlim=(0, 5))\n",
+        "ax.set_ylim(0, 100)\n",
+        "\n",
+        "ax.legend();\n"
       ]
     },
     {
