--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -277,19 +277,16 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 1\n",
+        "# @title Solution Exercise 1\n",
         "x = np.linspace(0, 5, 100)\n",
         "\n",
         "fig, ax = plt.subplots()\n",
         "\n",
-        "ax.plot(x, x**2, linestyle='--', label='x²')\n",
-        "ax.plot(x, x**3, linestyle='-.', label='x³')\n",
-        "ax.plot(x, x**1.5, color='green', linewidth=2, label='x^1.5')  # extra\n",
+        "ax.plot(x, x**2, linestyle=\"--\", label=\"x²\")\n",
+        "ax.plot(x, x**3, linestyle=\"-.\", label=\"x³\")\n",
+        "ax.plot(x, x**1.5, color=\"green\", linewidth=2, label=\"x^1.5\")  # extra\n",
         "\n",
-        "ax.set(title='Polynomial Functions',\n",
-        "       xlabel='x',\n",
-        "       ylabel='y',\n",
-        "       ylim=(0, 100))\n",
+        "ax.set(title=\"Polynomial Functions\", xlabel=\"x\", ylabel=\"y\", ylim=(0, 100))\n",
         "\n",
         "ax.legend();"
       ]
@@ -335,18 +332,21 @@
         "# Scatter with colour mapping\n",
         "fig, ax = plt.subplots()\n",
         "\n",
-        "scatter = ax.scatter(qog['gdp_pc'], qog['corruption'],\n",
-        "                     c=qog['hdi'],       # colour by HDI\n",
-        "                     cmap='viridis',\n",
-        "                     alpha=0.7,\n",
-        "                     edgecolors='gray',\n",
-        "                     s=50)\n",
+        "scatter = ax.scatter(\n",
+        "    qog[\"gdp_pc\"],\n",
+        "    qog[\"corruption\"],\n",
+        "    c=qog[\"hdi\"],  # colour by HDI\n",
+        "    cmap=\"viridis\",\n",
+        "    alpha=0.7,\n",
+        "    edgecolors=\"gray\",\n",
+        "    s=50,\n",
+        ")\n",
         "\n",
-        "ax.set(title='GDP per capita vs Corruption',\n",
-        "       xlabel='GDP per capita',\n",
-        "       ylabel='Corruption')\n",
+        "ax.set(\n",
+        "    title=\"GDP per capita vs Corruption\", xlabel=\"GDP per capita\", ylabel=\"Corruption\"\n",
+        ")\n",
         "\n",
-        "plt.colorbar(scatter, label='Human Development Index');"
+        "plt.colorbar(scatter, label=\"Human Development Index\");"
       ]
     },
     {
@@ -371,12 +371,13 @@
       "source": [
         "fig, ax = plt.subplots()\n",
         "\n",
-        "ax.hist(qog['gdp_pc'].dropna(), bins=30, alpha=0.7,\n",
-        "        edgecolor='black', color='steelblue')\n",
+        "ax.hist(\n",
+        "    qog[\"gdp_pc\"].dropna(), bins=30, alpha=0.7, edgecolor=\"black\", color=\"steelblue\"\n",
+        ")\n",
         "\n",
-        "ax.set(title='Distribution of GDP per capita',\n",
-        "       xlabel='GDP per capita',\n",
-        "       ylabel='Frequency');"
+        "ax.set(\n",
+        "    title=\"Distribution of GDP per capita\", xlabel=\"GDP per capita\", ylabel=\"Frequency\"\n",
+        ");"
       ]
     },
     {
@@ -405,7 +406,29 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ###\n",
-        "\n"
+        "\n",
+        "fig, ax = plt.subplots()\n",
+        "\n",
+        "scatter = ax.scatter(\n",
+        "    qog[\"corruption\"],\n",
+        "    qog[\"hdi\"],\n",
+        "    c=qog[\"gdp_pc\"],\n",
+        "    # cmap=\"coolwarm\",\n",
+        "    cmap=\"RdYlGn\",\n",
+        "    alpha=0.6,\n",
+        "    edgecolors=\"gray\",\n",
+        "    s=40,\n",
+        ")\n",
+        "\n",
+        "ax.set(\n",
+        "    title=\"Corruption vs Human Development\",\n",
+        "    xlabel=\"Corruption\",\n",
+        "    ylabel=\"Human Development Index\",\n",
+        ")\n",
+        "\n",
+        "plt.colorbar(scatter, label=\"GDP per capita\");\n",
+        "\n",
+        "# Higher corruption is associated with lower HDI."
       ]
     },
     {
