--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -483,7 +483,7 @@
         "# print(plt.style.available)\n",
         "\n",
         "# Apply a clean style for the rest of this notebook\n",
-        "plt.style.use('seaborn-v0_8-whitegrid')"
+        "plt.style.use(\"seaborn-v0_8-whitegrid\")"
       ]
     },
     {
@@ -508,19 +508,24 @@
       "source": [
         "fig, ax = plt.subplots(figsize=(8, 5))\n",
         "\n",
-        "ax.scatter(qog['gdp_pc'], qog['hdi'], alpha=0.5, s=30)\n",
+        "ax.scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.5, s=30)\n",
         "\n",
         "# Annotate a specific country\n",
-        "norway = qog[qog['country'] == 'Norway']\n",
-        "ax.annotate('Norway',\n",
-        "            xy=(norway['gdp_pc'].values[0], norway['hdi'].values[0]),\n",
-        "            xytext=(norway['gdp_pc'].values[0] - 20000, norway['hdi'].values[0] - 0.05),\n",
-        "            arrowprops=dict(arrowstyle='->', color='red'),\n",
-        "            fontsize=10, color='red')\n",
+        "norway = qog[qog[\"country\"] == \"Norway\"]\n",
+        "ax.annotate(\n",
+        "    \"Norway\",\n",
+        "    xy=(norway[\"gdp_pc\"].values[0], norway[\"hdi\"].values[0]),\n",
+        "    xytext=(norway[\"gdp_pc\"].values[0] - 20000, norway[\"hdi\"].values[0] - 0.05),\n",
+        "    arrowprops=dict(arrowstyle=\"->\", color=\"red\"),\n",
+        "    fontsize=10,\n",
+        "    color=\"red\",\n",
+        ")\n",
         "\n",
-        "ax.set(title='GDP per capita vs HDI',\n",
-        "       xlabel='GDP per capita',\n",
-        "       ylabel='Human Development Index');"
+        "ax.set(\n",
+        "    title=\"GDP per capita vs HDI\",\n",
+        "    xlabel=\"GDP per capita\",\n",
+        "    ylabel=\"Human Development Index\",\n",
+        ");"
       ]
     },
     {
@@ -564,7 +569,48 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ###\n",
-        "\n"
+        "\n",
+        "# helper function to wrap texts\n",
+        "\n",
+        "\n",
+        "def wrap_text(text, width):\n",
+        "    import textwrap\n",
+        "\n",
+        "    if text is None:\n",
+        "        return \"\"\n",
+        "    if not isinstance(text, str):\n",
+        "        text = str(text)\n",
+        "    # collapse multiple whitespace and trim\n",
+        "    text = \" \".join(text.split())\n",
+        "    try:\n",
+        "        return textwrap.fill(text, width=width)\n",
+        "    except Exception:\n",
+        "        return text\n",
+        "\n",
+        "\n",
+        "# create the scatter plot\n",
+        "fig, ax = plt.subplots(figsize=(8, 5))\n",
+        "scatter = ax.scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.5, s=30)\n",
+        "\n",
+        "# Annotate the country with highest corruption\n",
+        "highest_corruption = qog[qog[\"corruption\"] == qog[\"corruption\"].max()]\n",
+        "ax.annotate(\n",
+        "    wrap_text(highest_corruption[\"country\"].values[0], width=20),\n",
+        "    xy=(highest_corruption[\"gdp_pc\"].values[0], highest_corruption[\"hdi\"].values[0]),\n",
+        "    xytext=(\n",
+        "        highest_corruption[\"gdp_pc\"].values[0] + 20000,\n",
+        "        highest_corruption[\"hdi\"].values[0] - 0.05,\n",
+        "    ),\n",
+        "    arrowprops=dict(arrowstyle=\"->\", color=\"red\"),\n",
+        "    fontsize=10,\n",
+        "    color=\"red\",\n",
+        ")\n",
+        "\n",
+        "ax.set(\n",
+        "    title=\"GDP per capita vs HDI\",\n",
+        "    xlabel=\"GDP per capita\",\n",
+        "    ylabel=\"Human Development Index\",\n",
+        ");"
       ]
     },
     {
