--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -593,17 +593,30 @@
         "scatter = ax.scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.5, s=30)\n",
         "\n",
         "# Annotate the country with highest corruption\n",
-        "highest_corruption = qog[qog[\"corruption\"] == qog[\"corruption\"].max()]\n",
+        "highest_corruption = qog.loc[qog[\"corruption\"].idxmax()]\n",
+        "lowest_corruption = qog.loc[qog[\"corruption\"].idxmin()]\n",
         "ax.annotate(\n",
-        "    wrap_text(highest_corruption[\"country\"].values[0], width=20),\n",
-        "    xy=(highest_corruption[\"gdp_pc\"].values[0], highest_corruption[\"hdi\"].values[0]),\n",
+        "    wrap_text(highest_corruption[\"country\"], width=20),\n",
+        "    xy=(highest_corruption[\"gdp_pc\"], highest_corruption[\"hdi\"]),\n",
         "    xytext=(\n",
-        "        highest_corruption[\"gdp_pc\"].values[0] + 20000,\n",
-        "        highest_corruption[\"hdi\"].values[0] - 0.05,\n",
+        "        highest_corruption[\"gdp_pc\"] + 20000,\n",
+        "        highest_corruption[\"hdi\"] - 0.05,\n",
         "    ),\n",
         "    arrowprops=dict(arrowstyle=\"->\", color=\"red\"),\n",
         "    fontsize=10,\n",
         "    color=\"red\",\n",
+        ")\n",
+        "\n",
+        "ax.annotate(\n",
+        "    wrap_text(lowest_corruption[\"country\"], width=20),\n",
+        "    xy=(lowest_corruption[\"gdp_pc\"], lowest_corruption[\"hdi\"]),\n",
+        "    xytext=(\n",
+        "        lowest_corruption[\"gdp_pc\"] + 20000,\n",
+        "        lowest_corruption[\"hdi\"] - 0.03,\n",
+        "    ),\n",
+        "    arrowprops=dict(arrowstyle=\"->\", color=\"green\"),\n",
+        "    fontsize=10,\n",
+        "    color=\"green\",\n",
         ")\n",
         "\n",
         "ax.set(\n",
