--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -439,18 +439,26 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 2\n",
+        "# @title Solution Exercise 2\n",
         "fig, ax = plt.subplots(figsize=(8, 5))\n",
         "\n",
-        "scatter = ax.scatter(qog['corruption'], qog['hdi'],\n",
-        "                     c=qog['gdp_pc'], cmap='RdYlGn',\n",
-        "                     alpha=0.6, s=40, edgecolors='gray')\n",
+        "scatter = ax.scatter(\n",
+        "    qog[\"corruption\"],\n",
+        "    qog[\"hdi\"],\n",
+        "    c=qog[\"gdp_pc\"],\n",
+        "    cmap=\"RdYlGn\",\n",
+        "    alpha=0.6,\n",
+        "    s=40,\n",
+        "    edgecolors=\"gray\",\n",
+        ")\n",
         "\n",
-        "ax.set(title='Corruption vs Human Development',\n",
-        "       xlabel='Corruption Perception Score',\n",
-        "       ylabel='Human Development Index')\n",
+        "ax.set(\n",
+        "    title=\"Corruption vs Human Development\",\n",
+        "    xlabel=\"Corruption Perception Score\",\n",
+        "    ylabel=\"Human Development Index\",\n",
+        ")\n",
         "\n",
-        "plt.colorbar(scatter, label='GDP per capita');"
+        "plt.colorbar(scatter, label=\"GDP per capita\");"
       ]
     },
     {
@@ -634,38 +642,49 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 3\n",
+        "# @title Solution Exercise 3\n",
         "fig, ax = plt.subplots(figsize=(8, 5))\n",
         "\n",
-        "ax.scatter(qog['gdp_pc'], qog['corruption'], alpha=0.5, s=30)\n",
+        "ax.scatter(qog[\"gdp_pc\"], qog[\"corruption\"], alpha=0.5, s=30)\n",
         "\n",
         "# Highest GDP\n",
-        "top_gdp = qog.loc[qog['gdp_pc'].idxmax()]\n",
-        "ax.annotate(top_gdp['country'],\n",
-        "            xy=(top_gdp['gdp_pc'], top_gdp['corruption']),\n",
-        "            xytext=(top_gdp['gdp_pc'] - 20000, top_gdp['corruption'] + 0.3),\n",
-        "            arrowprops=dict(arrowstyle='->', color='blue'),\n",
-        "            fontsize=9, color='blue')\n",
+        "top_gdp = qog.loc[qog[\"gdp_pc\"].idxmax()]\n",
+        "ax.annotate(\n",
+        "    top_gdp[\"country\"],\n",
+        "    xy=(top_gdp[\"gdp_pc\"], top_gdp[\"corruption\"]),\n",
+        "    xytext=(top_gdp[\"gdp_pc\"] - 20000, top_gdp[\"corruption\"] + 0.3),\n",
+        "    arrowprops=dict(arrowstyle=\"->\", color=\"blue\"),\n",
+        "    fontsize=9,\n",
+        "    color=\"blue\",\n",
+        ")\n",
         "\n",
         "# Highest corruption\n",
-        "top_corr = qog.loc[qog['corruption'].idxmax()]\n",
-        "ax.annotate(top_corr['country'],\n",
-        "            xy=(top_corr['gdp_pc'], top_corr['corruption']),\n",
-        "            xytext=(top_corr['gdp_pc'] + 5000, top_corr['corruption'] - 0.3),\n",
-        "            arrowprops=dict(arrowstyle='->', color='red'),\n",
-        "            fontsize=9, color='red')\n",
+        "top_corr = qog.loc[qog[\"corruption\"].idxmax()]\n",
+        "ax.annotate(\n",
+        "    top_corr[\"country\"],\n",
+        "    xy=(top_corr[\"gdp_pc\"], top_corr[\"corruption\"]),\n",
+        "    xytext=(top_corr[\"gdp_pc\"] + 5000, top_corr[\"corruption\"] - 0.3),\n",
+        "    arrowprops=dict(arrowstyle=\"->\", color=\"red\"),\n",
+        "    fontsize=9,\n",
+        "    color=\"red\",\n",
+        ")\n",
         "\n",
         "# Extra: lowest corruption\n",
-        "low_corr = qog.loc[qog['corruption'].idxmin()]\n",
-        "ax.annotate(low_corr['country'],\n",
-        "            xy=(low_corr['gdp_pc'], low_corr['corruption']),\n",
-        "            xytext=(low_corr['gdp_pc'] + 10000, low_corr['corruption'] + 0.3),\n",
-        "            arrowprops=dict(arrowstyle='->', color='green'),\n",
-        "            fontsize=9, color='green')\n",
+        "low_corr = qog.loc[qog[\"corruption\"].idxmin()]\n",
+        "ax.annotate(\n",
+        "    low_corr[\"country\"],\n",
+        "    xy=(low_corr[\"gdp_pc\"], low_corr[\"corruption\"]),\n",
+        "    xytext=(low_corr[\"gdp_pc\"] + 10000, low_corr[\"corruption\"] + 0.3),\n",
+        "    arrowprops=dict(arrowstyle=\"->\", color=\"green\"),\n",
+        "    fontsize=9,\n",
+        "    color=\"green\",\n",
+        ")\n",
         "\n",
-        "ax.set(title='GDP per capita vs Corruption',\n",
-        "       xlabel='GDP per capita',\n",
-        "       ylabel='Corruption Perception Score');"
+        "ax.set(\n",
+        "    title=\"GDP per capita vs Corruption\",\n",
+        "    xlabel=\"GDP per capita\",\n",
+        "    ylabel=\"Corruption Perception Score\",\n",
+        ");"
       ]
     },
     {
@@ -709,19 +728,19 @@
         "fig, axes = plt.subplots(1, 3, figsize=(14, 4))\n",
         "\n",
         "# Left: scatter\n",
-        "axes[0].scatter(qog['gdp_pc'], qog['hdi'], alpha=0.5, s=20)\n",
-        "axes[0].set(title='GDP vs HDI', xlabel='GDP per capita', ylabel='HDI')\n",
+        "axes[0].scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.5, s=20)\n",
+        "axes[0].set(title=\"GDP vs HDI\", xlabel=\"GDP per capita\", ylabel=\"HDI\")\n",
         "\n",
         "# Middle: histogram\n",
-        "axes[1].hist(qog['corruption'].dropna(), bins=25, color='coral', edgecolor='black')\n",
-        "axes[1].set(title='Corruption Distribution', xlabel='Corruption')\n",
+        "axes[1].hist(qog[\"corruption\"].dropna(), bins=25, color=\"coral\", edgecolor=\"black\")\n",
+        "axes[1].set(title=\"Corruption Distribution\", xlabel=\"Corruption\")\n",
         "\n",
         "# Right: line (using sorted data)\n",
-        "sorted_qog = qog.sort_values('gdp_pc').dropna(subset=['gdp_pc', 'hdi'])\n",
-        "axes[2].plot(sorted_qog['gdp_pc'].values, sorted_qog['hdi'].values, alpha=0.5)\n",
-        "axes[2].set(title='HDI by GDP (sorted)', xlabel='GDP per capita', ylabel='HDI')\n",
+        "sorted_qog = qog.sort_values(\"gdp_pc\").dropna(subset=[\"gdp_pc\", \"hdi\"])\n",
+        "axes[2].plot(sorted_qog[\"gdp_pc\"].values, sorted_qog[\"hdi\"].values, alpha=0.5)\n",
+        "axes[2].set(title=\"HDI by GDP (sorted)\", xlabel=\"GDP per capita\", ylabel=\"HDI\")\n",
         "\n",
-        "fig.suptitle('QOG Dataset Overview', fontsize=14)\n",
+        "fig.suptitle(\"QOG Dataset Overview\", fontsize=14)\n",
         "plt.tight_layout();"
       ]
     },
@@ -732,23 +751,20 @@
       "outputs": [],
       "source": [
         "# Example: subplot_mosaic with custom layout\n",
-        "layout = [\n",
-        "    ['scatter', 'hist'],\n",
-        "    ['wide', 'wide']\n",
-        "]\n",
+        "layout = [[\"scatter\", \"hist\"], [\"wide\", \"wide\"]]\n",
         "\n",
         "fig, axes = plt.subplot_mosaic(layout, figsize=(10, 7))\n",
         "\n",
-        "axes['scatter'].scatter(qog['gdp_pc'], qog['corruption'], alpha=0.4, s=20)\n",
-        "axes['scatter'].set(title='GDP vs Corruption', xlabel='GDP pc', ylabel='Corruption')\n",
+        "axes[\"scatter\"].scatter(qog[\"gdp_pc\"], qog[\"corruption\"], alpha=0.4, s=20)\n",
+        "axes[\"scatter\"].set(title=\"GDP vs Corruption\", xlabel=\"GDP pc\", ylabel=\"Corruption\")\n",
         "\n",
-        "axes['hist'].hist(qog['hdi'].dropna(), bins=25, color='teal', edgecolor='black')\n",
-        "axes['hist'].set(title='HDI Distribution', xlabel='HDI')\n",
+        "axes[\"hist\"].hist(qog[\"hdi\"].dropna(), bins=25, color=\"teal\", edgecolor=\"black\")\n",
+        "axes[\"hist\"].set(title=\"HDI Distribution\", xlabel=\"HDI\")\n",
         "\n",
         "# Bar chart spanning the full width\n",
-        "region_means = qog.groupby('region')['corruption'].mean().sort_values()\n",
-        "axes['wide'].barh(region_means.index, region_means.values, color='steelblue')\n",
-        "axes['wide'].set(title='Mean Corruption by Region', xlabel='Mean Corruption')\n",
+        "region_means = qog.groupby(\"region\")[\"corruption\"].mean().sort_values()\n",
+        "axes[\"wide\"].barh(region_means.index, region_means.values, color=\"steelblue\")\n",
+        "axes[\"wide\"].set(title=\"Mean Corruption by Region\", xlabel=\"Mean Corruption\")\n",
         "\n",
         "plt.tight_layout();"
       ]
@@ -781,7 +797,26 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ###\n",
-        "\n"
+        "\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(14, 4))\n",
+        "\n",
+        "# histogram of gdp_pc\n",
+        "\n",
+        "axes[0].hist(qog[\"gdp_pc\"].dropna(), bins=25, color=\"teal\", edgecolor=\"black\")\n",
+        "axes[0].set(title=\"GDP Distribution\", xlabel=\"GDP pc\", ylabel=\"Frequency\")\n",
+        "\n",
+        "# histogram of hdi\n",
+        "axes[1].hist(qog[\"hdi\"].dropna(), bins=25, color=\"coral\", edgecolor=\"black\")\n",
+        "axes[1].set(title=\"HDI Distribution\", xlabel=\"HDI\", ylabel=\"Frequency\")\n",
+        "\n",
+        "# scatter plot of gdp_pc and hdi\n",
+        "axes[2].scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.4, s=20)\n",
+        "axes[2].set(title=\"GDP vs HDI\", xlabel=\"GDP pc\", ylabel=\"HDI\")\n",
+        "\n",
+        "# Overall title for the figure\n",
+        "fig.suptitle(\"QOG Dataset Overview\", fontsize=14)\n",
+        "\n",
+        "plt.tight_layout();"
       ]
     },
     {
