Format exercise 4 extra

--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -852,24 +852,25 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 4 Extra (Mosaic)\n",
-        "layout = [\n",
-        "    ['hist_gdp', 'hist_hdi'],\n",
-        "    ['scatter', 'scatter']\n",
-        "]\n",
+        "# @title Solution Exercise 4 Extra (Mosaic)\n",
+        "layout = [[\"hist_gdp\", \"hist_hdi\"], [\"scatter\", \"scatter\"]]\n",
         "\n",
         "fig, axes = plt.subplot_mosaic(layout, figsize=(10, 7))\n",
         "\n",
-        "axes['hist_gdp'].hist(qog['gdp_pc'].dropna(), bins=25, color='steelblue', edgecolor='black')\n",
-        "axes['hist_gdp'].set(title='GDP per capita', xlabel='GDP pc', ylabel='Frequency')\n",
+        "axes[\"hist_gdp\"].hist(\n",
+        "    qog[\"gdp_pc\"].dropna(), bins=25, color=\"steelblue\", edgecolor=\"black\"\n",
+        ")\n",
+        "axes[\"hist_gdp\"].set(title=\"GDP per capita\", xlabel=\"GDP pc\", ylabel=\"Frequency\")\n",
         "\n",
-        "axes['hist_hdi'].hist(qog['hdi'].dropna(), bins=25, color='coral', edgecolor='black')\n",
-        "axes['hist_hdi'].set(title='HDI', xlabel='HDI', ylabel='Frequency')\n",
+        "axes[\"hist_hdi\"].hist(qog[\"hdi\"].dropna(), bins=25, color=\"coral\", edgecolor=\"black\")\n",
+        "axes[\"hist_hdi\"].set(title=\"HDI\", xlabel=\"HDI\", ylabel=\"Frequency\")\n",
         "\n",
-        "axes['scatter'].scatter(qog['gdp_pc'], qog['hdi'], alpha=0.5, s=30)\n",
-        "axes['scatter'].set(title='GDP per capita vs HDI', xlabel='GDP per capita', ylabel='HDI')\n",
+        "axes[\"scatter\"].scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.5, s=30)\n",
+        "axes[\"scatter\"].set(\n",
+        "    title=\"GDP per capita vs HDI\", xlabel=\"GDP per capita\", ylabel=\"HDI\"\n",
+        ")\n",
         "\n",
-        "fig.suptitle('QOG Dataset: GDP and Human Development', fontsize=14)\n",
+        "fig.suptitle(\"QOG Dataset: GDP and Human Development\", fontsize=14)\n",
         "plt.tight_layout();"
       ]
     },
