--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -928,11 +928,11 @@
         "# Axes-level: fits into a matplotlib figure\n",
         "fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
         "\n",
-        "sns.histplot(data=qog, x='gdp_pc', ax=axes[0])\n",
-        "axes[0].set_title('GDP Distribution')\n",
+        "sns.histplot(data=qog, x=\"gdp_pc\", ax=axes[0])\n",
+        "axes[0].set_title(\"GDP Distribution\")\n",
         "\n",
-        "sns.scatterplot(data=qog, x='corruption', y='hdi', hue='fh_status', ax=axes[1])\n",
-        "axes[1].set_title('Corruption vs HDI by Freedom Status')\n",
+        "sns.scatterplot(data=qog, x=\"corruption\", y=\"hdi\", hue=\"fh_status\", ax=axes[1])\n",
+        "axes[1].set_title(\"Corruption vs HDI by Freedom Status\")\n",
         "\n",
         "plt.tight_layout();"
       ]
@@ -944,9 +944,15 @@
       "outputs": [],
       "source": [
         "# Figure-level: creates its own figure, easy faceting\n",
-        "sns.relplot(data=qog, x='gdp_pc', y='corruption',\n",
-        "            hue='fh_status', col='fh_status',\n",
-        "            height=3, aspect=1.2);"
+        "sns.relplot(\n",
+        "    data=qog,\n",
+        "    x=\"gdp_pc\",\n",
+        "    y=\"corruption\",\n",
+        "    hue=\"fh_status\",\n",
+        "    col=\"fh_status\",\n",
+        "    height=3,\n",
+        "    aspect=1.2,\n",
+        ");"
       ]
     },
     {
@@ -985,7 +991,53 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ###\n",
-        "\n"
+        "ppi_link = \"../datasets/ppi.csv\"\n",
+        "ppi = pd.read_csv(ppi_link)\n",
+        "ppi = ppi.drop(\"Unnamed: 0\", axis=1)\n",
+        "ppi.rename(columns={\"ccodealp\": \"iso3c\", \"parl_power_index\": \"ppi\"}, inplace=True)\n",
+        "\n",
+        "# merge qog and ppi on country code\n",
+        "qog_ppi = pd.merge(qog, ppi, on=\"iso3c\", how=\"inner\")\n",
+        "\n",
+        "# prepare for subplots\n",
+        "fig, axes = plt.subplots(2, 1, figsize=(8, 8))\n",
+        "\n",
+        "# Use seaborn to create a scatter plot of ppi vs corruption, colored by fh_status\n",
+        "sns.scatterplot(\n",
+        "    data=qog_ppi,\n",
+        "    x=\"ppi\",\n",
+        "    y=\"corruption\",\n",
+        "    hue=\"fh_status\",\n",
+        "    alpha=0.7,\n",
+        "    edgecolor=\"gray\",\n",
+        "    ax=axes[0],\n",
+        ")\n",
+        "axes[0].set_title(\"PPI vs Corruption by Freedom Status\")\n",
+        "axes[0].set_xlabel(\"Political Participation Index (PPI)\")\n",
+        "axes[0].set_ylabel(\"Corruption Perception Score\")\n",
+        "axes[0].legend(title=\"Freedom Status\")\n",
+        "\n",
+        "# boxplot showing distribution of ppi across different regime types\n",
+        "sns.boxplot(\n",
+        "    data=qog_ppi, x=\"fh_status\", hue=\"fh_status\", y=\"ppi\", palette=\"Set2\", ax=axes[1]\n",
+        ")\n",
+        "axes[1].set_title(\"PPI Distribution by Regime Type\")\n",
+        "axes[1].set_xlabel(\"Regime Type\")\n",
+        "axes[1].set_ylabel(\"Political Participation Index (PPI)\")\n",
+        "\n",
+        "# use `sns.catplot` to reproduce the boxplot\n",
+        "sns.catplot(\n",
+        "    data=qog_ppi,\n",
+        "    x=\"fh_status\",\n",
+        "    y=\"ppi\",\n",
+        "    hue=\"fh_status\",\n",
+        "    kind=\"box\",\n",
+        "    col=\"region\",\n",
+        "    palette=\"Set2\",\n",
+        "    height=4,\n",
+        "    aspect=1.5,\n",
+        "    col_wrap=3,\n",
+        ")"
       ]
     },
     {
