replace qog_ppi with df

--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -827,20 +827,20 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 4\n",
+        "# @title Solution Exercise 4\n",
         "# Basic version\n",
         "fig, axes = plt.subplots(1, 3, figsize=(14, 4))\n",
         "\n",
-        "axes[0].hist(qog['gdp_pc'].dropna(), bins=25, color='steelblue', edgecolor='black')\n",
-        "axes[0].set(title='GDP per capita', xlabel='GDP pc', ylabel='Frequency')\n",
+        "axes[0].hist(qog[\"gdp_pc\"].dropna(), bins=25, color=\"steelblue\", edgecolor=\"black\")\n",
+        "axes[0].set(title=\"GDP per capita\", xlabel=\"GDP pc\", ylabel=\"Frequency\")\n",
         "\n",
-        "axes[1].hist(qog['hdi'].dropna(), bins=25, color='coral', edgecolor='black')\n",
-        "axes[1].set(title='Human Development Index', xlabel='HDI', ylabel='Frequency')\n",
+        "axes[1].hist(qog[\"hdi\"].dropna(), bins=25, color=\"coral\", edgecolor=\"black\")\n",
+        "axes[1].set(title=\"Human Development Index\", xlabel=\"HDI\", ylabel=\"Frequency\")\n",
         "\n",
-        "axes[2].scatter(qog['gdp_pc'], qog['hdi'], alpha=0.5, s=20)\n",
-        "axes[2].set(title='GDP vs HDI', xlabel='GDP per capita', ylabel='HDI')\n",
+        "axes[2].scatter(qog[\"gdp_pc\"], qog[\"hdi\"], alpha=0.5, s=20)\n",
+        "axes[2].set(title=\"GDP vs HDI\", xlabel=\"GDP per capita\", ylabel=\"HDI\")\n",
         "\n",
-        "fig.suptitle('QOG Dataset: GDP and Human Development', fontsize=14)\n",
+        "fig.suptitle(\"QOG Dataset: GDP and Human Development\", fontsize=14)\n",
         "plt.tight_layout();"
       ]
     },
@@ -997,14 +997,14 @@
         "ppi.rename(columns={\"ccodealp\": \"iso3c\", \"parl_power_index\": \"ppi\"}, inplace=True)\n",
         "\n",
         "# merge qog and ppi on country code\n",
-        "qog_ppi = pd.merge(qog, ppi, on=\"iso3c\", how=\"inner\")\n",
+        "df = pd.merge(qog, ppi, on=\"iso3c\", how=\"inner\")\n",
         "\n",
         "# prepare for subplots\n",
         "fig, axes = plt.subplots(2, 1, figsize=(8, 8))\n",
         "\n",
         "# Use seaborn to create a scatter plot of ppi vs corruption, colored by fh_status\n",
         "sns.scatterplot(\n",
-        "    data=qog_ppi,\n",
+        "    data=df,\n",
         "    x=\"ppi\",\n",
         "    y=\"corruption\",\n",
         "    hue=\"fh_status\",\n",
@@ -1019,7 +1019,7 @@
         "\n",
         "# boxplot showing distribution of ppi across different regime types\n",
         "sns.boxplot(\n",
-        "    data=qog_ppi, x=\"fh_status\", hue=\"fh_status\", y=\"ppi\", palette=\"Set2\", ax=axes[1]\n",
+        "    data=df, x=\"fh_status\", hue=\"fh_status\", y=\"ppi\", palette=\"Set2\", ax=axes[1]\n",
         ")\n",
         "axes[1].set_title(\"PPI Distribution by Regime Type\")\n",
         "axes[1].set_xlabel(\"Regime Type\")\n",
@@ -1027,7 +1027,7 @@
         "\n",
         "# use `sns.catplot` to reproduce the boxplot\n",
         "sns.catplot(\n",
-        "    data=qog_ppi,\n",
+        "    data=df,\n",
         "    x=\"fh_status\",\n",
         "    y=\"ppi\",\n",
         "    hue=\"fh_status\",\n",
@@ -1048,28 +1048,32 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 5\n",
+        "# @title Solution Exercise 5\n",
         "# 5a: Load PPI\n",
-        "ppi_link = '../datasets/ppi.csv'\n",
+        "ppi_link = \"../datasets/ppi.csv\"\n",
         "ppi = pd.read_csv(ppi_link)\n",
-        "ppi = ppi.drop('Unnamed: 0', axis=1)\n",
+        "ppi = ppi.drop(\"Unnamed: 0\", axis=1)\n",
         "\n",
-        "ppi = ppi.rename(columns={\n",
-        "    'ccodealp': 'iso3c',\n",
-        "    'parl_power_index': 'ppi',\n",
-        "})\n",
+        "ppi = ppi.rename(\n",
+        "    columns={\n",
+        "        \"ccodealp\": \"iso3c\",\n",
+        "        \"parl_power_index\": \"ppi\",\n",
+        "    }\n",
+        ")\n",
         "\n",
         "# 5b: Merge\n",
-        "df = qog.merge(ppi, on='iso3c')  # they share the iso3c column\n",
-        "print(f'Merged shape: {df.shape}')\n",
-        "print(f'Original QOG: {qog.shape[0]} rows, PPI: {ppi.shape[0]} rows')\n",
+        "df = qog.merge(ppi, on=\"iso3c\")  # they share the iso3c column\n",
+        "print(f\"Merged shape: {df.shape}\")\n",
+        "print(f\"Original QOG: {qog.shape[0]} rows, PPI: {ppi.shape[0]} rows\")\n",
         "\n",
         "# 5c: Scatter\n",
         "fig, ax = plt.subplots(figsize=(8, 5))\n",
-        "sns.scatterplot(data=df, x='ppi', y='corruption', hue='fh_status', ax=ax)\n",
-        "ax.set(title='Parliamentary Power vs Corruption',\n",
-        "       xlabel='Parliamentary Power Index',\n",
-        "       ylabel='Corruption');\n"
+        "sns.scatterplot(data=df, x=\"ppi\", y=\"corruption\", hue=\"fh_status\", ax=ax)\n",
+        "ax.set(\n",
+        "    title=\"Parliamentary Power vs Corruption\",\n",
+        "    xlabel=\"Parliamentary Power Index\",\n",
+        "    ylabel=\"Corruption\",\n",
+        ");\n"
       ]
     },
     {
@@ -1080,14 +1084,16 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 5 (continued)\n",
+        "# @title Solution Exercise 5 (continued)\n",
         "# 5d: Boxplot\n",
         "fig, ax = plt.subplots(figsize=(8, 5))\n",
-        "sns.boxplot(data=df, x='fh_status', y='ppi', ax=ax)\n",
-        "ax.set(title='Parliamentary Power by Regime Type',\n",
-        "       xlabel='Regime Type',\n",
-        "       ylabel='Parliamentary Power Index')\n",
-        "ax.tick_params(axis='x', rotation=20);\n"
+        "sns.boxplot(data=df, x=\"fh_status\", y=\"ppi\", ax=ax)\n",
+        "ax.set(\n",
+        "    title=\"Parliamentary Power by Regime Type\",\n",
+        "    xlabel=\"Regime Type\",\n",
+        "    ylabel=\"Parliamentary Power Index\",\n",
+        ")\n",
+        "ax.tick_params(axis=\"x\", rotation=20);\n"
       ]
     },
     {
@@ -1098,11 +1104,18 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 5 Extra\n",
+        "# @title Solution Exercise 5 Extra\n",
         "# Extra: Faceted boxplot\n",
-        "sns.catplot(data=df, x='fh_status', y='ppi',\n",
-        "            col='region', col_wrap=3,\n",
-        "            kind='box', height=3, aspect=1.3)\n",
+        "sns.catplot(\n",
+        "    data=df,\n",
+        "    x=\"fh_status\",\n",
+        "    y=\"ppi\",\n",
+        "    col=\"region\",\n",
+        "    col_wrap=3,\n",
+        "    kind=\"box\",\n",
+        "    height=3,\n",
+        "    aspect=1.3,\n",
+        ")\n",
         "plt.xticks(rotation=30);"
       ]
     },
@@ -1141,8 +1154,9 @@
       "source": [
         "# regplot: single regression\n",
         "fig, ax = plt.subplots(figsize=(7, 5))\n",
-        "sns.regplot(data=df, x='corruption', y='hdi', ax=ax,\n",
-        "            scatter_kws={'alpha': 0.4, 's': 20});"
+        "sns.regplot(\n",
+        "    data=df, x=\"corruption\", y=\"hdi\", ax=ax, scatter_kws={\"alpha\": 0.4, \"s\": 20}\n",
+        ");"
       ]
     },
     {
