--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -1166,10 +1166,16 @@
       "outputs": [],
       "source": [
         "# lmplot: regression lines by group\n",
-        "sns.lmplot(data=df, x='corruption', y='hdi',\n",
-        "           hue='fh_status', col='fh_status',\n",
-        "           height=4, aspect=1,\n",
-        "           scatter_kws={'alpha': 0.5, 's': 20});"
+        "sns.lmplot(\n",
+        "    data=df,\n",
+        "    x=\"corruption\",\n",
+        "    y=\"hdi\",\n",
+        "    hue=\"fh_status\",\n",
+        "    col=\"fh_status\",\n",
+        "    height=4,\n",
+        "    aspect=1,\n",
+        "    scatter_kws={\"alpha\": 0.5, \"s\": 20},\n",
+        ");"
       ]
     },
     {
@@ -1196,9 +1202,8 @@
       "outputs": [],
       "source": [
         "# FacetGrid: scatter by region\n",
-        "g = sns.FacetGrid(df, col='region', hue='fh_status',\n",
-        "                  col_wrap=3, height=3, aspect=1.2)\n",
-        "g.map(sns.scatterplot, 'gdp_pc', 'corruption')\n",
+        "g = sns.FacetGrid(df, col=\"region\", hue=\"fh_status\", col_wrap=3, height=3, aspect=1.2)\n",
+        "g.map(sns.scatterplot, \"gdp_pc\", \"corruption\")\n",
         "g.add_legend();"
       ]
     },
@@ -1222,9 +1227,12 @@
       "outputs": [],
       "source": [
         "# Quick pairplot\n",
-        "sns.pairplot(df[['gdp_pc', 'corruption', 'hdi', 'ppi', 'fh_status']].dropna(),\n",
-        "             hue='fh_status', height=2.5,\n",
-        "             plot_kws={'alpha': 0.4, 's': 15});"
+        "sns.pairplot(\n",
+        "    df[[\"gdp_pc\", \"corruption\", \"hdi\", \"ppi\", \"fh_status\"]].dropna(),\n",
+        "    hue=\"fh_status\",\n",
+        "    height=2.5,\n",
+        "    plot_kws={\"alpha\": 0.4, \"s\": 15},\n",
+        ");"
       ]
     },
     {
@@ -1234,7 +1242,7 @@
       "outputs": [],
       "source": [
         "# PairGrid with different plot types per triangle\n",
-        "g = sns.PairGrid(df[['gdp_pc', 'corruption', 'hdi', 'perc_wip']].dropna())\n",
+        "g = sns.PairGrid(df[[\"gdp_pc\", \"corruption\", \"hdi\", \"perc_wip\"]].dropna())\n",
         "g.map_upper(sns.scatterplot, alpha=0.4, s=15)\n",
         "g.map_lower(sns.kdeplot)\n",
         "g.map_diag(sns.histplot);"
@@ -1266,7 +1274,19 @@
       "outputs": [],
       "source": [
         "### YOUR CODE HERE ###\n",
-        "\n"
+        "\n",
+        "sns.lmplot(\n",
+        "    data=df,\n",
+        "    x=\"fh_polity\",\n",
+        "    y=\"corruption\",\n",
+        "    hue=\"fh_status\",\n",
+        "    order=2,\n",
+        "    height=3,\n",
+        "    aspect=1.2,\n",
+        "    col=\"region\",\n",
+        "    col_wrap=3,\n",
+        "    scatter_kws={\"alpha\": 0.4, \"s\": 15},\n",
+        ")"
       ]
     },
     {
@@ -1292,11 +1312,19 @@
       },
       "outputs": [],
       "source": [
-        "#@title Solution Exercise 6 Extra\n",
-        "sns.lmplot(data=df, x='democracy', y='corruption',\n",
-        "           hue='fh_status', col='region', col_wrap=3,\n",
-        "           height=3, aspect=1.2, order=2,\n",
-        "           scatter_kws={'alpha': 0.4, 's': 15});"
+        "# @title Solution Exercise 6 Extra\n",
+        "sns.lmplot(\n",
+        "    data=df,\n",
+        "    x=\"democracy\",\n",
+        "    y=\"corruption\",\n",
+        "    hue=\"fh_status\",\n",
+        "    col=\"region\",\n",
+        "    col_wrap=3,\n",
+        "    height=3,\n",
+        "    aspect=1.2,\n",
+        "    order=2,\n",
+        "    scatter_kws={\"alpha\": 0.4, \"s\": 15},\n",
+        ");"
       ]
     },
     {
