Comment out unneeded import

--- a/Week 4/W4_visualisations_refined.ipynb
+++ b/Week 4/W4_visualisations_refined.ipynb
@@ -1504,15 +1504,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "# from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "# Parameters for the torus\n",
     "R = 2.0  # Distance from center of hole to center of tube\n",
     "r = 1.0  # Radius of the tube\n",
     "\n",
     "# Parametric grid\n",
-    "theta = np.linspace(0, 2*np.pi, 50)\n",
-    "phi = np.linspace(0, 2*np.pi, 50)\n",
+    "theta = np.linspace(0, 2 * np.pi, 50)\n",
+    "phi = np.linspace(0, 2 * np.pi, 50)\n",
     "theta, phi = np.meshgrid(theta, phi)\n",
     "\n",
     "X = (R + r * np.cos(phi)) * np.cos(theta)\n",
@@ -1520,17 +1520,25 @@
     "Z = r * np.sin(phi)\n",
     "\n",
     "fig = plt.figure(figsize=(8, 6))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "ax.plot_surface(X, Y, Z, color='cyan', alpha=0.6, edgecolor='none')\n",
+    "ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "ax.plot_surface(X, Y, Z, color=\"cyan\", alpha=0.6, edgecolor=\"none\")\n",
     "\n",
     "for i in range(10):\n",
     "    angle = 2 * np.pi * i / 10\n",
     "    x_coord = (R + r) * np.cos(angle)\n",
     "    y_coord = (R + r) * np.sin(angle)\n",
-    "    ax.text(x_coord, y_coord, 0, str(i), color='black', fontsize=12,\n",
-    "            ha='center', va='center')\n",
+    "    ax.text(\n",
+    "        x_coord,\n",
+    "        y_coord,\n",
+    "        0,\n",
+    "        str(i),\n",
+    "        color=\"black\",\n",
+    "        fontsize=12,\n",
+    "        ha=\"center\",\n",
+    "        va=\"center\",\n",
+    "    )\n",
     "\n",
-    "ax.set_title('3D Donut (Torus) with Digits 0-9')\n",
+    "ax.set_title(\"3D Donut (Torus) with Digits 0-9\")\n",
     "ax.view_init(elev=30, azim=45)\n",
     "plt.tight_layout();"
    ]
